fix(GUI): remove horizontal scrollbar in combobox/listbox (Fixes #2131 PR #2194)

--- a/src/renderer/assets/styles/components/combobox.scss
+++ b/src/renderer/assets/styles/components/combobox.scss
@@ -86,7 +86,29 @@
   border-radius: 6px;
   height: fit-content;
   max-height: 350px!important;
-  overflow: auto;
+  overflow: hidden auto;
+
+  &::-webkit-scrollbar {
+    width: 10px;
+    transition: 200ms;
+
+    &-thumb {
+        background-color: var(--scrollbar-thumb);
+        border-radius: 5px;
+        border-left: 2px solid transparent;
+        background-clip: padding-box;
+        cursor: pointer;
+
+        &:hover {
+          border: 0;
+        }
+
+    }
+
+    &-track {
+        background-color: var(--color-secondary);
+        }
+  }
 
   .react_aria_ListBox {
     display: block;
@@ -107,6 +129,9 @@
     color: var(--color-primary);
     position: relative;
     transition: 100ms;
+    text-wrap: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   
     &.selected {
       font-weight: 600;
